[package]
name = "tunnel-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
colored = "2.0.4"
serde = "1.0.193"
serde_derive = "1.0.193"
toml = "0.8.8"
